# oo-viikkotehtavat

./: .gitignore  README.md
viikko6/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
week 1/viikko1tehtava/: CMakeLists.txt  main.cpp
week 2/viiko2tehtava/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
week 3/viikon3tehtava/: CMakeLists.txt  main.cpp
week 4/viikon4tehtava/: ASIAKAS.cpp  ASIAKAS.h  CMakeLists.txt  LUOTTOTILI.cpp  Luottotili.h  PANKKITILI.cpp  PANKKITILI.h  main.cpp
week5/viikko5tehtava/: CMakeLists.txt  Notifikaattori.cpp  Notifikaattori.h  Seuraaja.cpp  Seuraaja.h  main.cpp
week7/viikko7tehtava2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viikko7tehtava2_en_FI.ts
week7/viiko7tehtava1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
week8/viikko8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
